crates/toml/tests/snapshots/invalid/table/duplicate-key-07.stderr
TOML parse error at line 2, column 2
  |
2 | [tbl]
  |  ^^^
duplicate key
